--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="img/personagem 0.png" alt="">
+    <div id="container">
+
+        <div id="letrasErradas">
+            <h1>A - F - G - G</h1>
+        </div>
+
+        <img src="img/personagem 0.png" alt="">
+
+        <div id="palavra">
+            <h1>_ _ A _ A _</h1>
+        </div>
+
+        <div id="inputs">
+            <input type="text" maxlength="1">
+            <button>OK</button>
+        </div>
+    </div>
 </body>
 </html>
