--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>
 
         <div id="inputs">
-            <input type="text" maxlength="1">
-            <button>OK</button>
+            <input type="text" maxlength="1" size="1" id="letraUser">
+            <button id="btn">OK</button>
         </div>
     </div>
 </body>
