--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div id="inputs">
             <input type="text" maxlength="1" size="1" id="letraUser">
-            <button id="btn">OK</button>
+            <button id="btn" onclick="actionbtn()">OK</button>
         </div>
     </div>
 
