bug ToUpperCase corrigido

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
         <div id="letrasErradas"></div>
 
-        <img src="img/personagem 0.png" alt="">
+        <div id="divImg">
+            <img src="img/personagem 0.png" id="imagem">
+        </div>
 
         <div id="palavra"></div>
 
