--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div id="inputs">
             <input type="text" maxlength="1" size="1" id="letraUser">
-            <button id="btn" onclick="actionbtn()">OK</button>
+            <button id="btn" onclick="enviarLetra()">OK</button>
         </div>
     </div>
 
